Fixed navbar collapse, changed text coloring

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,3 +1,11 @@
 .header .navbar {
   background-color: orange;
 }
+
+.header .navbar .navbar-brand {
+  color: white;
+}
+
+.header .navbar-default .navbar-nav>li>a {
+  color: white;
+}
